# fastapi_template

./: .dockerignore  .gitignore  Dockerfile.dev  MANIFEST.in  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  start.sh  test.sh
api/: app.py
